# chat2m

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
chat2me-asr/: Dockerfile
chat2me-common/: voice-requirements.txt
chat2me-core/: Dockerfile
chat2me-core/app/: main.py
chat2me-deps/: install-selected.sh
chat2me-deps/tts/: melotts.sh
chat2me-llm/: Dockerfile  entrypoint.sh
chat2me-llm/app/: main.py
chat2me-speech/: Dockerfile
chat2me-speech/app/: speech.py
chat2me-status/: Dockerfile
chat2me-tts/: Dockerfile
config/: profile.yaml  runtime.env  wake_keywords.txt  wake_keywords_raw.txt
display-firmware/: README.md
display-firmware/components/esp_bsp/: bsp_display.c  bsp_display.h  bsp_touch.c
display-firmware/main/: main.cpp
firmware/display/: CMakeLists.txt  README.md
firmware/display/components/esp_bsp/: CMakeLists.txt  bsp_touch.h
firmware/display/main/: idf_component.yml  main.cpp
ollama/: Dockerfile  entrypoint.sh
scripts/: download-voice-models.sh  start-local.sh  start-speech.sh  start-voice-agent.sh  stop-local.sh  stop-speech.sh  stop-voice-agent.sh
services/core/: Dockerfile
services/llm/: Dockerfile
services/voice/: Dockerfile
voice-agent/: Dockerfile  Dockerfile.speech  entrypoint.sh  requirements.txt
voice-agent/app/: agent.py  respeaker.py  speech.py  status.py  wake.py
voice-agent/speech/: Dockerfile
voice-agent/status/: Dockerfile
voice-agent/wake/: Dockerfile
voice-gateway/: Dockerfile  entrypoint.sh
voice-gateway/app/: main.py
(+10 files in other folders)
